# sayit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/implement-pdf-extraction/: SKILL.md
.agents/skills/implement-russian-tts-engine/: SKILL.md
.agents/skills/plan-pdf-tts-implementation/: SKILL.md
.agents/skills/setup-local-tts-stack/: SKILL.md
.agents/skills/verify-end-to-end/: SKILL.md
docs/: ARCHITECTURE.md  CODEX_TASK_PROMPTS.md  SILERO_CAPABILITIES.md  SYSTEM_REQUIREMENTS.md  WINDOWS_DESKTOP.md
examples/: config.example.toml  piper.config.toml
src/pdf_tts_ru/: audio.py  cli.py  config.py  document_extract.py  docx_extract.py  models.py  normalize.py  output_plan.py  page_ranges.py  pdf_extract.py  pipeline.py  table_render.py  text_extract.py
src/pdf_tts_ru/gui/: __init__.py  main.py  models.py  runtime.py  service.py  window.py
src/pdf_tts_ru/tts/: __init__.py  base.py  factory.py  piper_engine.py  silero_engine.py  silero_text.py
tests/: test_audio.py  test_config.py  test_desktop_service.py  test_document_extract.py  test_gui_smoke.py  test_normalize.py  test_output_plan.py  test_page_ranges.py  test_pdf_extract.py  test_pipeline.py  test_piper_engine.py  test_silero_engine.py
tools/: bootstrap_voice_example.sh  build_windows_gui.py  verify.sh
